--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,19 @@
-#container {
-  text-align: center;
-
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+.no-scroll {
+  --overflow: hidden;
 }
-
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
+.center-content {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
+@media (orientation: portrait) {
+  .center-content {
+    font-size: 16em;
+  }
 }
-
-#container a {
-  text-decoration: none;
+@media (orientation: landscape) {
+  .center-content {
+    font-size: 16em;
+  }
 }
